<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="me.guillaumewilmot.powerlifting.ui.MoveUpwardBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:text="@string/sign_in_text"
                android:textAllCaps="true"
                android:textColor="@color/text_primary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textColor="@color/text_primary"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/divider" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/evMailLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/evMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_text_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_primary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/evPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/evPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:hint="@string/form_text_password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_primary" />

            </android.support.design.widget.TextInputLayout>

            <me.guillaumewilmot.powerlifting.ui.AnimatedButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border_background"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:paddingStart="64dp"
                android:paddingEnd="64dp"
                android:text="@string/signin_login_btn_text"
                android:textColor="@color/text_primary" />

            <me.guillaumewilmot.powerlifting.ui.AnimatedButton
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/signin_forgot_password_btn_text"
                android:textColor="@color/text_primary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <me.guillaumewilmot.powerlifting.ui.AnimatedButton
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/signin_register_btn_text"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/secondary"
                android:visibility="gone" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>